--- a/Reminder/Reminder.WebApi/Views/Home/Notes.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/Notes.cshtml
@@ -1,30 +1,9 @@
-﻿@using System.Globalization
-@model IEnumerable<Reminder.Data.Entities.Note>
-
-<div class="container" style="padding-top: 20px;">
+﻿<div class="container" style="padding-top: 20px;">
     <div class="row">
         <div class="col-md-5">
             <div class="row">
                 <div class="row">
-                    <div class="col-xs-12">
-                        @*@foreach (var note in Model)
-                        {
-                            <a style="cursor: pointer" class="list-group-item clearfix" id="@note.Id">
-                                <span class="pull-left">
-                                    @if (note.Photos.Any())
-                                    {
-                                        <img src="data:image/gif;base64, @Convert.ToBase64String(note.Photos.ElementAt(0).Image)"
-                                             alt="Note photo"
-                                             class="img-responsive"
-                                             style="max-width: 160px; max-height: 100px;" />
-                                    }
-                                </span>
-                                <div class="pull-right text-container">
-                                    <h4 class="list-group-item-heading">@note.CreationDate.ToString("MMM d, yyyy", new CultureInfo("en-GB"))</h4>
-                                    <p class="list-group-item-text">@note.Description</p>
-                                </div>
-                            </a>
-                        }*@
+                    <div class="col-xs-12" id="notesList">
                     </div>
                 </div>
             </div>
@@ -35,15 +14,40 @@
         </div>
     </div>
 
-    <a class="round-button"><h1>+</h1></a>
+    <a class="round-button" id ="newNoteLink"><h1>+</h1></a>
     <!-- Loading indicator -->
     <div class="loader"></div>
 </div>
 
 <script type="text/javascript">
+    function bin2String(array) {
+        var result = "";
+        for (var i = 0; i < array.length; i++) {
+            result += String.fromCharCode(parseInt(array[i], 2));
+        }
+        return result;
+    }
+
     $(document).ready(function () {
         $.get("/api/notes",
-            function(data) {
+            function (data) {
+                if (data.length !== 0) {
+                    for (var i = 0; i < data.length; i++) {
+                        var html = "<a style=\"cursor: pointer\" class=\"list-group-item clearfix\" id=\"" + data[i].id + "\"></a>" + "<span class=\"pull - left\">";
+
+                        if (data[i].photos[0] != null) {
+                            html += "<img src=\"data:image/gif;base64, " +
+                                bin2String(data[i].photos[0].image) +
+                                "alt=\"Note photo\" class=\"img-responsive\" " +
+                                "style=\"max-width: 160px; max-height: 100px;\" />";
+                        }
+                        html += "</span>";
+                        html += "<div class=\"pull-right text-container\"><h4 class=\"list-group-item-heading\">" + data[i].creationDate +"</h4>" +
+                            "<p class=\"list-group-item-text\">" +data[i].description +"</p></div>";
+
+                        $("#notesList").append(html);
+                    }
+                }
                 console.log(data);
             }, "json");
         
@@ -54,6 +58,10 @@
             $(this).addClass("active");
             $(this).css({ "z-index": 0 });
             $("#noteDetails").load("@Url.Action("NoteDetals", "Home")", { "id": this.id });
+        });
+
+        $("#newNoteLink").click(function() {
+            $("#formsContainer").load("@Url.Action("CreateNote","Home")");
         });
     });
 </script>
