--- a/Reminder/Reminder.WebApi/Views/Home/Notes.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/Notes.cshtml
@@ -33,25 +33,26 @@
             url: "/api/notes",
             type: "GET",
             headers: { "Authorization": "Bearer " + localStorage.getItem("token") },
-            success: function(data) {
+            success: function (data) {
+                console.log(data);
+
                 if (data.length !== 0) {
                     for (var i = 0; i < data.length; i++) {
-                        var html = "<a style=\"cursor: pointer\" class=\"list-group-item clearfix\" id=\"" + data[i].id + "\"></a>" + "<span class=\"pull - left\">";
+                        var html = "<a style=\"cursor: pointer\" class=\"list-group-item clearfix\" id=\"" + data[i].Id + "\">" + "<span class=\"pull - left\">";
 
-                        if (data[i].photos[0] != null) {
+                        if (data[i].Photos[0] != null) {
                             html += "<img src=\"data:image/gif;base64, " +
-                                bin2String(data[i].photos[0].image) +
+                                bin2String(data[i].Photos[0].Image) +
                                 "alt=\"Note photo\" class=\"img-responsive\" " +
                                 "style=\"max-width: 160px; max-height: 100px;\" />";
                         }
                         html += "</span>";
-                        html += "<div class=\"pull-right text-container\"><h4 class=\"list-group-item-heading\">" + data[i].creationDate + "</h4>" +
-                            "<p class=\"list-group-item-text\">" + data[i].description + "</p></div>";
+                        html += "<div class=\"pull-right text-container\"><h4 class=\"list-group-item-heading\">" + data[i].CreationDate + "</h4>" +
+                            "<p class=\"list-group-item-text\">" + data[i].Description + "</p></div></a>";
 
                         $("#notesList").append(html);
                     }
                 }
-                console.log(data);
             },
             error: function(error) {
                 console.log(error);
