--- a/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/momentjs")
+    @Scripts.Render("~/bundles/momentjswithlocales")
     @Scripts.Render("~/scripts/jquery-3.3.1.js")
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
     @RenderSection("scripts", required: false)
