--- a/Reminder/Reminder.WebApi/Views/Home/CreateNote.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/CreateNote.cshtml
@@ -19,24 +19,58 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
+        var fileBytes = [];
+        var fileNames = [];
+
         $("#photos").change(function () {
             var files = $("#photos").prop("files");
             var names = $.map(files, function (val) { return val.name; });
+
             $("#fileNames").text(names);
+
+            // Read uploaded files content with JS FileReader
+            for (var i = 0; i < files.length; i++) {
+                var file = files[i];
+
+                // Save filename
+                var fileName = file.name;
+                fileNames.push(fileName);
+
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    var encoded = e.target.result.replace(/^data:(.*;base64,)?/, '');
+                    if ((encoded.length % 4) > 0) {
+                        encoded += '='.repeat(4 - (encoded.length % 4));
+                    }
+                    fileBytes.push(encoded);
+                }
+                reader.readAsDataURL(file);
+            }
         });
 
         $("#createFormSubmitButton").click(function () {
             var currentDate = new Date();
+            var photoModels = [];
+
+            // Create photomodels from filenames and content
+            for (var i = 0; i < fileNames.length; i++) {
+                var photoModel = {
+                    name: fileNames[i],
+                    image: fileBytes[i],
+                    noteId: 0
+                };
+                photoModels.push(photoModel);
+            }
+            console.log(photoModels);
 
             var noteModel = {
                 description: $("#noteDescription").val(),
                 creationDate: currentDate.toJSON(),
                 editDate: currentDate.toJSON(),
                 userId: '1',
-                photos: [],
+                photos: photoModels,
                 videos: []
             };
-            console.log(noteModel);
 
             $.ajax({
                 type: 'POST',
