--- a/Reminder/Reminder.WebApi/Views/Home/Notes.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/Notes.cshtml
@@ -17,6 +17,13 @@
     <a class="round-button" id ="newNoteLink"><h1>+</h1></a>
     <!-- Loading indicator -->
     <div class="loader"></div>
+
+    <!-- Full size image -->
+    <div id="modalImage" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01" />
+        <div id="caption"></div>
+    </div>
 </div>
 
 <script type="text/javascript">
@@ -74,6 +81,7 @@
                                 }
                                 html += "<div class=\"col-xs-12\"><p>" + note.Description + "</p></div></div>";
                                 $("#noteDetails").html(html);
+                                setPhotoImageClickListener();
                             },
                             error: function(error) {
                                 console.log(error);
@@ -87,6 +95,19 @@
                 console.log(error);
             }
         });
+
+        function setPhotoImageClickListener() {
+            $("#photos-container img").click(function () {
+                $("#modalImage").css({ display: "block" });
+                $("#img01").attr("src", this.src);
+                $("#caption").html(this.alt);
+
+                $(".close").click(function () {
+                    $("#modalImage").css({ display: "none" });
+                });
+            });
+        };
+        
         
         $(".loader").hide();
 
