Angular client: added components and services.

--- a/Reminder/Reminder.Web/ClientApp/src/styles.css
+++ b/Reminder/Reminder.Web/ClientApp/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+/* Buttons */
+.button {
+    border: none; /* Remove borders */
+    color: white; /* Add a text color */
+    padding: 14px 28px; /* Add some padding */
+    cursor: pointer; /* Add a pointer cursor on mouse-over */
+  }
+  
+  .success { background-color: #4CAF50; }
+  
+  .success:hover {background-color: #46a049; }
+  
+  .button-info {background-color: #2196F3;} /* Blue */
+  .button-info:hover {background: #0b7dda; }
+  
+  .button:disabled { background-color: #e7e7e7; cursor: not-allowed; color: #999999; }
