--- a/Reminder/Reminder.Web/ClientApp/src/app/app.component.html
+++ b/Reminder/Reminder.Web/ClientApp/src/app/app.component.html
@@ -1,10 +1,2 @@
-<div class='container-fluid'>
-  <div class='row'>
-    <div class='col-sm-3'>
-      <app-nav-menu></app-nav-menu>
-    </div>
-    <div class='col-sm-9 body-content'>
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
