--- a/Reminder/Reminder.Web/ClientApp/src/app/core/header/header.component.html
+++ b/Reminder/Reminder.Web/ClientApp/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
   <ul class="topnav-right">
     <ng-template [ngIf]="!isAuthenticated()">
       <a routerLink="/signup">Register</a>
-      <a routerLink="/signin">Login</a>
+      <a (click)="onLogin()">Login</a>
     </ng-template>
 
     <li class="dropdown" appDropdown *ngIf="isAuthenticated()">
